--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <header><title>testpacito</title></header>
 <body>
-<h1 style="font-size:60px;">Everyone says Hello World</h1>
+<h1>Everyone says Hello World</h1>
 but no one says how is world...
 </body>
 </html>
