--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 
 <html>
+]<meta charset="UTF-8">
+<link rel="stylesheet" href="https://github.com/98otiss03/98otiss03.github.io/blob/master/p5hatty.ttf">
+<style>
+.bgimg {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("https://images8.alphacoders.com/678/thumb-1920-678023.jpg");
+    min-height: 90%;
+}
 <header><title>testpacito</title></header>
 <body>
 <h1>Everyone says Hello World</h1>
 but no one says how is world...
 </body>
 </html>
+
