--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <html>
-]<meta charset="UTF-8">
+<meta charset="UTF-8">
 <link rel="stylesheet" href="https://github.com/98otiss03/98otiss03.github.io/blob/master/p5hatty.ttf">
 <style>
 .bgimg {
