--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Everyone says Hello World</h1>
 but no one says how is world...
+<h3>Source code for this site can be located <a href="https://github.com/98otiss03/98otiss03.github.io">on GitHub</a></h3>
 </body>
 </html>
 
