--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
 <h1>Everyone says Hello World</h1>
 but no one says how is world...
-<h2>Source code for this site can be located <a href="https://github.com/98otiss03/98otiss03.github.io">on GitHub</a></h2>
+<h2>Source code for this site can be found <a href="https://github.com/98otiss03/98otiss03.github.io">on GitHub</a></h2>
+  
 </body>
 </html>
 
