--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Persona 5 Menu Effect</title>
+  <title>HoneyOTU's site</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <audio id="chains" preload="auto">
-	<source src="https://github.com/HoneyOTU1337/honeyotu1337.github.io/blob/master/assets/sounds/chain.wav" controls></source>
+	<source src="./assets/sounds/chain.wav" controls></source>
 </audio>
 <div class="navbar">
   
