--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
   </a>
   <a class="link-wrapper" href="#">
-    <span class="fallback">Ask</span>
+    <span class="fallback">Mods</span>
     <div class="img-wrapper">
       <img class="normal" src="./assets/images/mods.png">
       <img class="active" src="./assets/images/mods_red.png">
